perf(server): shared heartbeat scheduler, configurable thread pool, virtual SSH upload worker
Area A of #452 — finishing the virtual-thread request-handling work. The virtual
thread pools, concurrency cap, and virtual SSH *receive* worker already landed; this
removes the remaining per-push platform-thread costs.

- HeartbeatSender: all senders now schedule their keepalive ticks on one shared,
  daemon-threaded process-wide scheduler instead of each spinning up its own
  single-thread executor. fogwall sits inline on every push, and a per-push scheduler
  meant a live thread per in-flight push held for the whole approval wait. Ticks are
  quick sideband writes so a small shared pool serves many pushes; close() cancels
  only this sender's tick (removeOnCancelPolicy keeps the queue clean). A
  package-private constructor lets tests inject a controllable scheduler.
- server.threads.* config (min/max/idle-timeout) exposed on the platform
  QueuedThreadPool via FogwallJettyApplication.configureThreadPool, applied by both
  apps; defaults match Jetty's own, and min > max is rejected at startup.
- SSH upload (fetch) worker → Thread.ofVirtual(), matching the receive path, so a
  burst of concurrent clones/fetches parks on upstream I/O instead of exhausting the
  pool.

Push-memory bounding (old area 2) is already covered by max-push-bytes /
max-object-size-bytes; repository-cache concurrency is split out to #556. The
approval-flood benchmark is deferred — it needs a dashboard + manual-approval perf
stack the current bench harness does not set up.

Tests: HeartbeatSenderTest (shared-scheduler scheduling, close cancels the tick not
the scheduler, write-failure disconnect, functional real-scheduler dots) and
ThreadPoolConfigTest (defaults, raise, lower-below-default-min, inverted-config
rejection). Docs: CONFIGURATION.md server.threads block.

closes #452

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01RXWLYczDx5gYkQqWs